[tool.poetry]
name = "labelbox-to-yolo"
version = "0.1.0"
description = "Downloads a dataset from labelbox and formats it for YOLO11"
authors = ["strider"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
labelbox = "3.42.0"
Pillow = "10.3.0"
python-dotenv = "1.0.0"
PyYAML = "^6.0.3"
requests = "2.32.4"
requests-oauthlib = "1.3.1"
tqdm = "4.66.3"
matplotlib = "^3.8.0"
ultralytics = "^8.3.214"
numpy = "^1.26"

[tool.poetry.scripts]
save-dataset = "save_dataset:main"
view-dataset = "view_dataset:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
